# cert-preview

./: Cargo.toml  LICENSE_MIT  README.md
resource/: 1.der
src/: lib.rs  utils.rs  x509.rs
tests/: web.rs
